fix edit button container collapsed on mobile and add extra length on sessioin form

--- a/src/modules/scheduling/css/sessionModal.scss
+++ b/src/modules/scheduling/css/sessionModal.scss
@@ -229,8 +229,19 @@
 @media (max-width: 768px){
     [state^="scheduling"] {
         .session-modal{
+            .edit-button-container{
+                .save-button{
+                    width: 130px;
+                }
+                .cancel-button{
+                    margin-right: 20px;
+                }
+            }
             &.session-modal-responsive{
                 width: 100%;
+            }
+             .session-form{
+                height: calc(100vh - 350px);
             }
         }    
     }
